--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx webpack --config webpack.config.js --mode development",
-    "build": "npx webpack --config webpack.config.js --mode production",
+    "build": "webpack",
     "start": "webpack serve --mode=development --config webpack.config.js"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
     "html-loader": "^2.0.0",
+    "html-webpack-partials-plugin": "^0.8.0",
     "html-webpack-plugin": "^5.1.0",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
