--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "autoprefixer": "^10.2.4",
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
+    "handlebars-loader": "^1.7.1",
     "html-loader": "^2.0.0",
-    "html-webpack-partials-plugin": "^0.8.0",
     "html-webpack-plugin": "^5.1.0",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
