--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/MkrtichSargsyan/Todo-List-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.17",
     "autoprefixer": "^10.2.4",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.1",
@@ -29,7 +33,7 @@
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.3",
-    "webpack": "^5.22.0",
+    "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
