--- a/package.json
+++ b/package.json
@@ -23,21 +23,25 @@
     "@babel/core": "^7.12.17",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/preset-env": "^7.12.17",
-    "autoprefixer": "^10.2.4",
+    "babel-eslint": "10.1.x",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
+    "eslint": "6.8.x",
+    "eslint-config-airbnb-base": "14.1.x",
+    "eslint-plugin-import": "2.20.x",
     "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.1.0",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
-    "tailwindcss": "^2.0.3",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "autoprefixer": "^10.2.4",
+    "normalize.css": "^8.0.1",
+    "tailwindcss": "^2.0.3"
   }
 }
