--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "npx webpack --config webpack.config.js --mode development",
     "build": "webpack",
-    "start": "webpack serve --mode=development --config webpack.config.js"
+    "start": "webpack serve --mode=development --config webpack.config.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
     "style-loader": "^2.0.0",
